@@ -2,7 +2,7 @@ DIST guitarix2-0.27.1.tar.bz2 20608874 SHA256 9bfb26bd6615aaece69755c2a7082a4eb6
 DIST guitarix2-0.28.1.tar.bz2 20152396 SHA256 3662e4582d96297474a7d5ece6dccd2c3c6f267b5e116bf19857dc67989af5ca SHA512 0113510a79f190e6ad9f0e9f882cf0951551e0594ae6074cf0ba66534cef96edd9ef7d99ebfd146a17edfe09d9bfbef56b7b9942548692aba0a0f078a8011f62 WHIRLPOOL c7deea224f65133f503d431aefa56e13c6997b5eb8d60c1588b72e62cd3ce2c0eb000b7d70a647370a311687ac86d1d421665452facf3f906d1b841c77adc1b9
 EBUILD guitarix2-0.27.1-r1.ebuild 2707 SHA256 230539de4ba351b7a69a53565a07a8a4c3a2e94e8e96fea87127509d0390396f SHA512 a7f52b8aab7f14655a995427115252a9939d3cfcba3e1e3df68765267b90dd7875ecea0a275df73cec82cfd778ddf7e7dabb554b809ce603386e32324c15d0cb WHIRLPOOL 5740ff8fda6a57842a1038bc3e18e64eabca4731c1fe2027993a24bffd0bcfe3eb32cc5f3015d0b5f09da4db9fe86060f4781768a57d27c88f497708034bf82e
 EBUILD guitarix2-0.27.1.ebuild 2666 SHA256 4ca693c0d893be2b29e6de6369dda78a7c05dc97aea828cb0a9951dbfd7220be SHA512 3355f72d61dcc23d3032197d3a732836d6f5643a59cd43d962de85f5b3ad8b618e3fcbb2f6acf6355878e907c309c54dbe37e47a00aa2d7590b5bfa224806182 WHIRLPOOL dff6cfa7c4c19eca764c9c24c2391305c22cd86a58a69ad410ef34bebffd522c23b20f180fffa98744e0e100eb6ab9db908d840836dbf0581bb5cb0a0df461bd
-EBUILD guitarix2-0.28.1.ebuild 2629 SHA256 e95ff80794ca4d3c3665eaf3301c3a0f676ce3676162958d9973a0c72ac993a1 SHA512 ae9665de66d1b4d85d54fef7e14d6fb3a9f5938df7ee7f0180d1a1a94da1440b7d33a89a3b651c519c80b1b83ce984ee43c06efeaa5d78f547929791fa33cbb9 WHIRLPOOL 13aa255ba93984f91d1df13b94ac6035c4fc2880300b5a0885864d22823aa66d54f5c44a86a219599c4628556ecc24c580afbde3c42f28f218139038bc48823c
-EBUILD guitarix2-9999.ebuild 2623 SHA256 26acd9095f319f5b43e2c85dbce914e2409c4b906cdcfdbcc79ef9907b26f54d SHA512 a7650d6d50bc4fbac3aced7bca2057552c9627ae800b12d74ae3ddd7e64ad2f02561052658e3139e1554309ef9b84d6347d0d19d27f6092aef9129bd75b8fa8d WHIRLPOOL 7e2af1629f87d9bba4ee411d06c198de6fddfc5cb1e69d26c801b48ed229289d6f2187ac2a6879867ae23f5c2c0bf5e607dec776a7ef71d28df1de010c05be93
-MISC ChangeLog 4299 SHA256 a1727e3209b19ad8bbd80ea1f52bead303c70e0173a97d66447a23b6dd276df1 SHA512 b1f382270ccf4905e3e18319069325a0e299d61ecbbf8f706335785758a26462229c3ea9fca4d45aa1a2646c98e5241a11a4facf3568159ba18ab41518a40e23 WHIRLPOOL fc91d91f3e649a3d280e5c725065cc100d17b91ded45956b14f6dfffddc22cb0dbff35b94fed2f4927dac4b7cbf595253702a648c57f89af1c3d69eefe6eff63
+EBUILD guitarix2-0.28.1.ebuild 2635 SHA256 b12a00ece238d8c73e69e94a2242ac7cacb98f6dc8c2263e26a7d26e2eeacc54 SHA512 5f2a74a6ce98fa8ca54383d4fe5cc6ccaf44c51579e62c021bba436f9938a2728086c8312fdee62049d6bd4ccd6c884a67238f3699b06bcff2bf619f092f56da WHIRLPOOL 7af819d57169039cf0ff2bdc0adbe378eea0afc1941fd639d783df524cf9e727a3bdcfab1682178a6a7ece2914582e1937388040fd4f8019b0f0e0506625ecf5
+EBUILD guitarix2-9999.ebuild 2629 SHA256 b018617a8ed929a5154f212c9eb60a1d5c2252371e6f9881b652b7485520954d SHA512 d31e9783547e97e35e2bc3a47b17bdbd55f6e0a7fd2f6054d9debc01324725c0cd9f95a62a6ad4c6bf39e498948409dea711b92a2074928b3384a074e1919ca2 WHIRLPOOL fcc76a60ae0ca329fb98499493eb0c47d928622e432ca8925480a080a90fd1c6be29319278c29d1eba1a3002be10c46b9deb835907003d770a165b324d06dc6e
+MISC ChangeLog 4507 SHA256 8e06519d6078e5fb180cf358bcbb590c61d5ca65fb0aeb5a31c531cfeed88d5d SHA512 e6348c41a67809fe7402e58752e3e7537ee97a3425fb058fdaac050cd81128c4a3c28498176c3a794912f1e938a4202b6d33e1fe82d9f3593367a3e683cc4cb2 WHIRLPOOL 6fd6a3460b9aee0eb5f609116c7e55494766a40e042321a4de82143d4af169f01d4873e3bd552627cbe0a5627973a1ecf7906dd3fd9316be537cc1b826d37457
 MISC metadata.xml 642 SHA256 fef3af7ca682c1fc74f610c6afbdb908af976102a852d8bbea3616c361f2cf1d SHA512 783c6b25b865825ce1ded5d93202f5b0470da1255c33540f52e9b82d4c7d0f3eb76f643d5f06a35682ba7cd3f5dd6eb07798d8a3a247d9cc57cdc6acc9b96739 WHIRLPOOL c83234ce05b42242d307decb6dcb866ea5b02294b5da3e4901b3da47adc210f7dc50c8100d846b9b5c8a89fcaacec4f598a765f3f952fc433818d37c9beb7e1c
